# git-like

./: Cargo.toml
src/: README.md  clap.rs  comparison_engine.rs  file_meta.rs  hasher.rs  index_loader.rs  main.rs  meta_to_struct.rs  par_indexer.rs  parallel.rs  refiner.rs  walker.rs  writer.rs
