[package]
name = "git-like"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
ignore = "0.4.25"
memap2 = "0.1.2"
natord = "1.0.9"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sha2 = "0.11.0"
walkdir = "2.5.0"
